Applications/HomeAssistant/components/_historydb/resources/middleware.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: historydb-grafana-basicauth
  labels:
    app.kubernetes.io/component: 'historydb'
spec:
  basicAuth:
    secret: historydb-grafana-basicauth
    removeHeader: true
