Applications/HomeAssistant/components/_historydb/resources/statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: historydb
  labels:
    app.kubernetes.io/component: 'historydb'
  annotations:
    reloader.stakater.com/search: 'false'  # Enables search mode (only reloads if matching secrets/configMaps are found)
spec:
  revisionHistoryLimit: 3
  serviceName: historydb
  selector:
    matchLabels:
      app.kubernetes.io/component: 'historydb'
  replicas: 0
  persistentVolumeClaimRetentionPolicy:
    whenScaled: Retain
    whenDeleted: Retain
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/component: 'historydb'
    spec:
      restartPolicy: Always
      terminationGracePeriodSeconds: 60
      securityContext:
        runAsNonRoot: true
        runAsUser: 65534
        runAsGroup: 65534
        fsGroup: 65534
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: historydb
          image: victoriametrics/victoria-metrics:0.0.0
          imagePullPolicy: IfNotPresent
          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
            readOnlyRootFilesystem: true
          args:
            - -httpListenAddr=:8428
            - -storageDataPath=/victoria-metrics-data
            - -retentionPeriod=0y
            - -storage.minFreeDiskSpaceBytes=0GiB
            - -influx.forceStreamMode
            - -influx.databaseNames=homeassistant
            - -usePromCompatibleNaming
            - -loggerFormat=json
          resources:
            requests:
              cpu: 0.1
              memory: 256Mi
            limits:
              cpu: 1
              memory: 1Gi
          ports:
            - containerPort: 8428
              protocol: TCP
              name: http
          startupProbe:
            httpGet:
              path: /health
              port: http
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 2
            successThreshold: 1
            failureThreshold: 30
          readinessProbe:
            httpGet:
              path: /health
              port: http
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 15
            timeoutSeconds: 2
            successThreshold: 1
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /health
              port: http
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 60
            timeoutSeconds: 2
            successThreshold: 1
            failureThreshold: 3
          volumeMounts:
            - mountPath: /victoria-metrics-data
              name: historydb-data
  volumeClaimTemplates:
    - metadata:
        name: historydb-data
        labels:
          app.kubernetes.io/component: 'historydb'
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: longhorn-retain
        resources:
          requests:
            storage: 0Gi
